# DiscordBotStarter

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __main__.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  format-and-lint.yml
src/: __init__.py
src/core/: __init__.py  bot.py  env.py  errors.py  logger.py
src/core/views/: __init__.py  ticket.py  url_buttons.py
src/core/views/paginators/: __init__.py  classic.py  file.py  menu.py
src/database/: __init__.py  models.py
src/database/tables/: __init__.py  _table.py  config.py  tickets.py
src/ext/: __init__.py  system.py  tickets.py  utility.py
src/utils/: ansi.py  constants.py  converters.py  embeds.py  eval.py  help.py
